test/zinc_source/compile_errors/functions/04_required_after_default.zn
// expected-error: parameter 'y' must have a default
fn add(x = 1, y) {
    return x + y
}

fn main() {
    print(add(1, 2))
}
